# newsvendor-model

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
nvmodel/: __init__.py  model.py
test/: test_nvmodel.py
