[tool.poetry]
name = "nvmodel"
version = "0.1.0"
description = ""
authors = ["Yotaro Takazawa"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"